--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,9 @@
 buildscript {
 
     repositories {
-        jcenter()  //指定maven镜像，下同
+        jcenter()  
         google()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'   //指定classpath
@@ -18,6 +19,7 @@ allprojects {
     repositories {
         jcenter()
         google()
+        mavenCentral()
     }
 }
 
