--- a/networklib/build.gradle
+++ b/networklib/build.gradle
@@ -32,17 +32,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-
-    api 'com.squareup.retrofit2:retrofit:2.1.0'
-    api 'com.squareup.retrofit2:converter-gson:2.1.0'
-    api 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    api 'com.google.code.gson:gson:2.8.0'
-    api 'com.squareup.okhttp3:okhttp:3.5.0'
-    api 'com.squareup.okhttp3:logging-interceptor:3.5.0'
-    api 'io.reactivex.rxjava2:rxjava:2.1.2'
-    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    api 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-    api 'com.trello.rxlifecycle2:rxlifecycle:2.2.0'
-    api 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.0'
-    api 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 }
