圆形进度条progressbar

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':coolweather', ':commonlib', ':roundandcircleimage'
+include ':app', ':coolweather', ':commonlib', ':roundandcircleimage', ':typesprogressbar'
