Recyclerview展示不同的类型

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':coolweather', ':commonlib', ':roundandcircleimage', ':typesprogressbar', ':rxjavaandretrofit'
+include ':app', ':coolweather', ':commonlib', ':roundandcircleimage', ':typesprogressbar', ':rxjavaandretrofit', ':recyclerviewwithtangrams'
